<resources>
    <string name="app_name">Device Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="welcome_to_device_tracker">Welcome to Device Tracker</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="password">Password</string>
    <string name="assigned_user">Assigned User</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="signout">SignOut</string>
    <string name="assigned_users">Assigned Users</string>
    <string name="add_user">Add User</string>
    <string name="location_requests">Location Requests</string>
    <string name="status">Status:</string>
    <string name="pending">Pending</string>
    <string name="running">Running</string>
    <string name="chat">Chats</string>
    <string name="type_message_here">Type message here...</string>
    <string name="current_location">Current Location :</string>
    <string name="distance_covered_2_8km">Distance Covered :</string>
    <string name="cancel">Cancel</string>


</resources>