<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/assigned_user"
        android:title="@string/assigned_user"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
        android:iconTint="@color/secondaryAppColor"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/add_user"
        android:title="@string/add_user"
        android:icon="@drawable/ic_add_user_svgrepo_com"
        android:iconTint="@color/secondaryAppColor"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/location_request"
        android:title="@string/location_requests"
        android:icon="@drawable/ic_list_svgrepo_com"
        android:iconTint="@color/secondaryAppColor"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/chats"
        android:title="@string/chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:iconTint="@color/secondaryAppColor"
        app:showAsAction="always"
        />
</menu>