<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:fillViewport="true"
    android:background="@color/secondaryAppColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryAppColor"
            android:text="@string/welcome_to_device_tracker"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp"

            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="10dp"
            android:layout_gravity="center_horizontal|center_vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/login_bg"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Text_Input_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="@color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    app:startIconTint="@color/primaryAppColor"
                    app:hintTextColor="@color/primaryAppColor"
                    app:boxStrokeColor="@color/secondaryAppColor"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    app:boxBackgroundColor="@color/secondaryAppColor"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Edit_Text_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Text_Input_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    app:startIconTint="@color/primaryAppColor"
                    app:hintTextColor="@color/primaryAppColor"
                    app:boxStrokeColor="@color/secondaryAppColor"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    android:background="@drawable/textview_bg"
                    app:boxBackgroundColor="@color/secondaryAppColor"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Edit_Text_Email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Text_Input_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconTint="@color/primaryAppColor"
                    app:hintTextColor="@color/primaryAppColor"
                    app:boxStrokeColor="@color/secondaryAppColor"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    app:boxBackgroundColor="@color/secondaryAppColor"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/primaryAppColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Edit_Text_Password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        />



                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:checkedButton="@id/male_btn"
                    >
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/male_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/secondaryAppColor"
                        app:buttonTint="@color/secondaryAppColor"
                        android:layout_marginEnd="20dp"

                        android:layout_marginRight="20dp" />
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/female_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:textColor="@color/secondaryAppColor"
                        app:buttonTint="@color/secondaryAppColor"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp" />
                </RadioGroup>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SignUp"
                    android:textColor="@color/secondaryAppColor"
                    app:strokeColor="@color/secondaryAppColor"
                    app:strokeWidth="2dp"
                    app:rippleColor="@color/secondaryAppColor"
                    android:backgroundTint="@color/primaryAppColor"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    app:elevation="5dp"
                    />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>



</ScrollView>